Rewrite Patch Encounter route to use TSOA
